# VirtualPatient

./: .gitignore  CD8T SSE Only.docx  Data repository.docx  Dose vs Viral.docx  README.md  Rahil_Individuals.docx  results.xlsx
Data/: VPC.xlsx  (+9 more)
python/: 415A8F00.xlsx  AIC Comparison.xlsx  AllParameters_Full_loadings_and_variance.xlsx  BLISBLAS_benchmark.jl  Baccam_Viral_loadings_and_variance.xlsx  D1F98F00  Development.ipynb  Dose.xlsx  DoseFinal_summary.xlsx  DoseFull_summary.xlsx  Dose_Full_loadings_and_variance.xlsx  Dose_Full_summary.xlsx  Dose_Reduced_loadings_and_variance.xlsx  Dose_loadings_and_variance.xlsx  Fitting Schemes.xlsx  GEx.ipynb  HumanTranslation2.ipynb  LCT.xlsx  LCT_Viral_Full_loadings_and_variance.xlsx  LCT_Viral_Fullest_loadings_and_variance.xlsx  LCT_demo.ipynb  LinearRechallenge.xlsx  MICI.ipynb  Memoli.ipynb  Memory.ipynb  MemphisDynamics.ipynb  MurineVsHuman.ipynb  Myers.ipynb  New_VPC.ipynb  Patient_103.ipynb  Patient_107.ipynb  Patient_110.ipynb  Patient_111.ipynb  Patient_207 copy 2.ipynb  Patient_207 copy.ipynb  Patient_207.ipynb  Patient_307.ipynb  Patient_308.ipynb  Patient_Generator.ipynb  Patient_Generator_Copy copy.ipynb  (+56 more)
python/ODE Solver Dev/: Decay_Models.ipynb  Maggie.ipynb  Vector.ipynb  bayesian.ipynb  ddeSolverExample.ipynb  disparity.ipynb  events.ipynb  julia_benchmark.jl  opt_bench.ipynb
python/data/: Cohort1.xlsx  Cohort2.xlsx  Cohort3.xlsx  Rahil2020_Table8.xlsx
python/dose_optimization_results/: Patient_312_Combination_10_xi_delta_E.txt  Patient_312_Combination_11_xi_K_delta_E.txt  Patient_312_Combination_12_a_tau.txt  (+62 more)
(+685 files in other folders)
